--- a/Assignments/Aufgabe_ORF/style.css
+++ b/Assignments/Aufgabe_ORF/style.css
@@ -8,7 +8,7 @@
 }
 
 .logo{
-    background-color: red;
+    background-color: #c0141c;
     width: 80%;
     height: 120px;
 }
@@ -61,7 +61,6 @@ img{
     margin: 0px;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .headerright{
@@ -82,4 +81,19 @@ li{
     justify-content: space-between;
     margin: 0px;
     align-items: center;
+}
+
+.logo{
+    display:flex;
+    align-items: center;
+}
+
+.logotext{
+    font-size: 40px;
+    padding-left: 20px;
+    color: white;
+}
+
+.text{
+    padding:10px;
 }
